# webversal

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
seven_bridges/logging/: configuration.py  context.py  correlation_id_middleware.py  mixin.py
tests/: test_fast_graph.py  test_seven_bridges.py
webversal/: __init__.py  application.py
webversal/config/: __init__.py  framework_configuration.py
webversal/logging/: __init__.py  mixin.py  request_summary_middleware.py
webversal/ogm/: __init__.py  active_datbase_object.py  base_node.py  base_relationship.py  database_configuration.py
webversal/servers/: ___init__.py  web_server.py  web_server_configuration.py
webversal/servers/integrations/: __init__.py  hypercorn.py  mangum.py  uvicorn.py
webversal/tasks/: __init__.py  abc.py  base.py
webversal/tricks/: case_conversions.py  class_property.py
