[tool.poetry]
name = "webversal"
version = "0.1.0"
description = ""
authors = ["Zach Probst <zprobst@resilientvitality.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
strawberry-graphql = "^0.115.0"
fastapi = "^0.78.0"
hypercorn = "^0.13.2"
uvicorn = "^0.18.2"
mangum = "^0.15.0"
uvloop = "^0.16.0"
neo4j = "^4.4.4"
colorlog = "^6.6.0"
python-json-logger = "^2.0.2"
sentry-sdk = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
bandit = "^1.7.4"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
